Fix bug in handling wsdl file url and adding to the parent descriptor
svn path=/trunk/; revision=40340


Former-commit-id: b9a146054f822c5d85c3f6158f20b3e4e9c6ba0e